2006-01-08  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Patch to allow compilation with the Forte C
	compiler. (Damien Carbery, Bug #326024.)

2005-12-20  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c (main): Add setgid_io_init ().

2005-10-02  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c (gtk_minefield_motion_notify): Don't reset c to -1
	when a button is release: other buttons may still be pressed. Also
	add a check on the value of c to _multi_release. See bug 315767.

2005-09-08  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Remove calls to the old games-scores-dialog API.

2005-09-07  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Migrate to the new high scores API.

2005-08-26  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c: Decide what to do with a left-click when the button
	is released. This fixes a reversion in behaviour when "sweeping"
	the board. See bug #314403. As a side-effect the highlight of
	surrounding squares also behaves properly when sweeping from a
	cleared square to an uncleared one.

2005-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Added context tags as per the request in bug
	#312802. 

2005-07-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnomine/gnomine.c: Add a mnemonic to the new game button.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c: Do the inline thing properly. The glib docs are not
	just "vague", but actively misleading.

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c: Make ui_description readonly.

2005-07-10  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c (show_scores): Set dialog style as ascending time (#309958)

2005-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Commented out some experimental sound code. It
	will be deleted later when I figure out how to play overlapping 
	copies of the same sound.
